Compare Generalizability with GPT4

--- a/dpo.ipynb
+++ b/dpo.ipynb
@@ -229,7 +229,9 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "The installed version of bitsandbytes was compiled without GPU support. 8-bit optimizers, 8-bit multiplication, and GPU quantization are unavailable.\n",
       "Loading checkpoint shards: 100%|██████████| 2/2 [00:37<00:00, 18.68s/it]\n",
-      "Generating responses:   0%|          | 0/6553 [00:00<?, ?it/s]Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+      "Generating responses:   0%|          | 0/6553 [00:00<?, ?it/s]Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "Generating responses:   0%|          | 1/6553 [06:41<730:26:56, 401.35s/it]Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "Generating responses:   0%|          | 2/6553 [13:29<737:05:59, 405.06s/it]Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
      ]
     }
    ],
@@ -282,7 +284,69 @@
    "id": "c8307ce5-c1d4-49ad-a457-cb143c92f8e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "from openai import ChatCompletion\n",
+    "\n",
+    "def read_jsonl(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return [json.loads(line.strip()) for line in file.readlines()]\n",
+    "\n",
+    "def read_json(file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return json.load(file)\n",
+    "\n",
+    "def create_gpt4_prompt(post, summary_a, summary_b):\n",
+    "    prompt_text = f\"\"\"\n",
+    "system\n",
+    "You are a helpful assistant, that ranks models by the quality of their answers.\n",
+    "\n",
+    "user\n",
+    "Which of the following summaries does a better job of summarizing the most important points in the given forum post, without including unimportant or irrelevant details? A good summary is both precise and concise.\n",
+    "Post: \"{post}\"\n",
+    "Summary A:\n",
+    "{{\n",
+    "\"model\": \"LLM\",\n",
+    "\"summary\": \"{summary_a}\"\n",
+    "}}\n",
+    "Summary B:\n",
+    "{{\n",
+    "\"model\": \"Original\",\n",
+    "\"summary\": \"{summary_b}\"\n",
+    "}}\n",
+    "Now please rank the models by the quality of their summaries, so that the model with rank 1 has the best summary. Then return a list of the model names and ranks, i.e., produce the following output:\n",
+    "[\n",
+    "{{'model': <model-name>, 'rank': <model-rank>}},\n",
+    "{{'model': <model-name>, 'rank': <model-rank>}}\n",
+    "]\n",
+    "Your response must be a valid Python dictionary and should contain nothing else because we will directly execute it in Python. Please provide the ranking that the majority of humans would give.\n",
+    "\"\"\"\n",
+    "    return prompt_text\n",
+    "\n",
+    "def evaluate_summaries(original_data, inference_data):\n",
+    "    client = ChatCompletion()\n",
+    "    results = []\n",
+    "    for original, inferred in zip(original_data, inference_data):\n",
+    "        prompt = create_gpt4_prompt(original['post'], inferred['response'], original['summary'])\n",
+    "        response = client.create(prompt=prompt, model=\"gpt-4\", max_tokens=150)\n",
+    "        result = eval(response.choices[0].text)\n",
+    "        results.append(result)\n",
+    "    return results\n",
+    "\n",
+    "# Paths to your files\n",
+    "original_file_path = '/scratch/pvg2018/TLDR-Reddit/test.jsonl'\n",
+    "inference_file_path = '/scratch/pvg2018/TLDR-Reddit/SummaryMistral7b.jsonl'\n",
+    "\n",
+    "# Read data\n",
+    "original_data = read_jsonl(original_file_path)\n",
+    "inference_data = read_json(inference_file_path)\n",
+    "\n",
+    "# Evaluate and compare summaries\n",
+    "comparison_results = evaluate_summaries(original_data, inference_data)\n",
+    "\n",
+    "# Optionally, print or save the results\n",
+    "print(comparison_results)\n"
+   ]
   }
  ],
  "metadata": {
